--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+       <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+        <dependency>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>3.2</version>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
@@ -36,6 +42,11 @@
                     <artifactId>maven-source-plugin</artifactId>
                     <version>2.1.2</version>
                 </plugin>
+                <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.7.0.1746</version>
+            </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -50,4 +61,18 @@
             </plugin>
         </plugins>
     </build>
-</project>
+    <profiles>
+        <profile>
+            <id>sonar</id>
+                <activation>
+                    <activeByDefault>true</activeByDefault>
+                </activation>
+                <properties>
+                <!-- Optional URL to server. Default value is http://localhost:9000 -->
+                    <sonar.host.url>
+                        http://34.67.173.233:9000
+                        </sonar.host.url>
+            </properties>
+            </profile>
+            </profiles>
+            </project>
